--- a/style.css
+++ b/style.css
@@ -307,3 +307,24 @@ html, body {
   100% { transform: translate(0); }
 }
 
+/* mobile changes */
+
+@media (max-width: 768px) {
+  #folderWindow,
+  #nestedFolderWindow {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    padding-top: 50px; /* keep header space */
+  }
+
+  #folderHeader,
+  #nestedFolderHeader {
+    height: 50px;
+    font-size: 1.2rem;
+  }
+}
+
+
