--- a/style.css
+++ b/style.css
@@ -317,7 +317,8 @@ html, body {
     width: 100%;
     height: 100%;
     border-radius: 0;
-    padding-top: 50px; /* keep header space */
+    padding-top: 50px; /* room for header */
+    z-index: 9999; /* make sure it's always on top */
   }
 
   #folderHeader,
@@ -327,4 +328,14 @@ html, body {
   }
 }
 
+@media (max-width: 768px) {
+  #contactInfo {
+    position: fixed;
+    bottom: 90px; /* above the toolbar */
+    top: auto;
+    left: 0;
+    width: 100%;
+    text-align: center;
+  }
+}
 
